package com.aaron.yespdf.common;

/**
 * @author Aaron aaronzzxup@gmail.com
 */
public interface AppConfig {

    String DB_NAME     = "yespdf.db";
    String BUGLY_APPID = "fd084373ed";
}
