package com.aaron.yespdf.common;

/**
 * @author Aaron aaronzzxup@gmail.com
 */
public interface IContract {

    interface V {
        void attachP();
    }

    interface P {
        void detachV();
    }
}
